--- a/proyectoMovil/package.json
+++ b/proyectoMovil/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "bootstrap": "^5.3.8",
     "expo": "~53.0.22",
     "expo-image-picker": "~16.1.4",
     "expo-notifications": "~0.31.4",
